--- a/Linux/线程.md
+++ b/Linux/线程.md
@@ -18,10 +18,10 @@
 
 #### 上下文切换
 
-上下文切换主要是对CPU的执行流程进行切换，需要更改的是内核中管理调度的一些结构体，因为内核需要维护整个系统中所有进程的调度，因而切换进程会涉及到庞大的PCB列表的查询，优先权等复杂的调度问题；加上还有很多寄存器的写回等操作，因而会造成大量的时间片浪费。而线程调度在一般Linux体系下只是轻量级别的调度，涉及到的查询，优先级等问题的只限于本进程领域，因而会节省大量时间片。
+上下文切换主要是对CPU的执行流程进行切换，需要更改的是内核中管理调度的一些结构体，因为内核需要维护整个系统中所有进程的调度，因而切换进程会涉及到庞大的PCB列表的查询，优先权等复杂的调度问题；加上还有很多寄存器的写回等操作，因而会造成大量的时间片浪费。而线程调度在一般Linux体系下只是轻量级别的调度，涉及到的查询，优先级等问题的只限于本进程领域，因而会节省大量时间片。```进程```的调度涉及：
 
 - PC指针（程序计数器）
-- 内核维护的TLB：TLB(Translation Lookaside Buffer)转换检测缓冲区是一个内存管理单元,用于改进虚拟地址到物理地址转换速度的缓存。简单来说，就是**虚拟内存空间映射到实际物理内存的转换表**。这个表的作用就是缓存按照一定算法缓存的页表，页目录（最近访问优先替换算法等）。这样在内存地址转换时，就不用查找页表，因而算是一个cache。若地址映射时有miss，才实际查找物理页表。**PCB，上下文切换，意味着所有TLB页表miss**，因而需要很长时间加载。
+- 内核维护的TLB：TLB(Translation Lookaside Buffer)转换检测缓冲区是一个内存管理单元，用于改进虚拟地址到物理地址转换速度的缓存。简单来说，就是**虚拟内存空间映射到实际物理内存的转换表**。这个表的作用就是缓存按照一定算法缓存的页表，页目录（最近访问优先替换算法等）。这样在内存地址转换时，就不用查找页表，因而算是一个cache。若地址映射时有miss，才实际查找物理页表。**PCB，上下文切换，意味着所有TLB页表miss**，因而需要很长时间加载。
 - 上下文切换最费时间的就是**TLB的刷新**，因为程序切换了，原先的TLB就不再使用新的PCB了，因而需要装载新的转换表到TLB中。这种加载很费时间。
 
 ### 基本概念
@@ -266,7 +266,7 @@ int main(){
     // 因为虽然变量i存在于main函数的线程栈。但是由于main线程比较特殊
     // 由于main线程的生存周期一直存在（与该进程一致），因而它的线程栈空间
     // 内的变量也可以用来当作共享资源。
-    // 什么能当共享资源？：那些不依赖某一线程存在的，其他进程可以访问到的资源
+    // 什么能当共享资源？：那些不依赖某一线程存在的，其他线程可以访问到的资源
     // 都能当共享资源（按理说其他函数的函数栈中的变量也能被访问到，
     // 只要传给地址就可以）
     // 例如全局变量（存储在数据区），malloc空间（堆区），栈区中的某些变量（main
@@ -301,7 +301,7 @@ int main(){
 
 ```c
 pthread_mutex_lock(&mutex);
-pthread_mutex_lock(&mutex);//此处线程自身会把自身阻塞掉，一位此处锁已被关闭
+pthread_mutex_lock(&mutex);//此处线程自身会把自身阻塞掉，因为此处锁已被关闭
 //共享资源操作代码。。
 pthread_mutex_unlock(&mutex);
 pthread_mutex_unlock(&mutex);
@@ -316,7 +316,7 @@ pthread_mutexattr_init(&attr); // 对该初始化参数attr，初始化
 pthread_mutexattr_settype(&attr, PTHREAD_MUTEX_RECURSIVE);
 // 对该初始化参数进行设置，传入attr地址，进行设置，设置成宏定义的整型数
 // PTHREAD_MUTEX_RECURSIVE。PTHREAD_MUTEX_RECURSIVE代表
-// ----该锁可以被同一进程上锁多次（同时也需要解锁多次），不同进程不能加锁（若被锁住）
+// ----该锁可以被同一进程上锁多次（同时也需要解锁多次），不同线程不能加锁（若被锁住）
 // 这样用这个attr初始化r_mutex锁
 pthread_mutex_init(&r_mutex,&attr);
 // 这样就解决了上面的死锁问题
