--- a/Machine_Learning/概述.md
+++ b/Machine_Learning/概述.md
@@ -1,8 +1,26 @@
 # 机器学习概述
+#### 机器学习领悟
+- 机器学习的基础是```数据```，没有数据机器学习无从谈起。
+- 当代机器学习的主流是建立在```统计学```基础上的学习与预测。
 #### 机器学习可以分为：
 1. supervised learning 监督学习
 2. unsupervised learning 非监督学习
 3. Reinforcement learning 强化学习
+#### 选取合适的机器学习方法
+1. 根据目标
+    - 如果是要预测目标变量的值，则选择监督学习，否则选择非监督学习
+    - 如果是监督学习，目标是连续型预测，选择回归模型
+    - 如果是监督学习，目标是离散行预测，选择分类模型
+    - 如果是非监督学习，目标有离散的组，选择聚类模型
+    - 如果是非监督学习，目标需要做相似程度比较，选择密度估计
+2. 根据特征
+    - 选择方法时候，需要考虑：
+        1. 使用那些特征，特征选择的实际意义
+        2. 特征是离散的还是连续的，特征值是否缺值或是否有数据异常
+        3. 特征的频率分布
+3. 结果分析比较
+    - 用不同的统计比较方法，来比较不同模型的优劣
+
 #### Supervised learning 监督学习
 - 监督学习的特点是```拥有标签```，即原始数据都有自己的标签。每条数据都包括features（特征）和labels(标签)。我们任务是从样本中根据数据特征值和标签的对应关系，学习出一种模型，使得该模型能够预测新的数据的标签。即从新数据的features中推算出新数据改有的标签。
-- 根据标签的类型不同，可以将监督学习继续分为```标量型```和```数值型```
+- 根据标签的类型不同，可以将监督学习继续分为```标量型```和```数值型```；也可以分为```离散型```和```连续型```，对应的分别是```分类问题```和```回归问题```。
