--- a/Machine_Learning/概述.md
+++ b/Machine_Learning/概述.md
@@ -24,3 +24,8 @@
 #### Supervised learning 监督学习
 - 监督学习的特点是```拥有标签```，即原始数据都有自己的标签。每条数据都包括features（特征）和labels(标签)。我们任务是从样本中根据数据特征值和标签的对应关系，学习出一种模型，使得该模型能够预测新的数据的标签。即从新数据的features中推算出新数据改有的标签。
 - 根据标签的类型不同，可以将监督学习继续分为```标量型```和```数值型```；也可以分为```离散型```和```连续型```，对应的分别是```分类问题```和```回归问题```。
+
+### 算法总览
+|算法名称|算法分类|算法类别|
+|--|--|---|
+|KNN(k-nearest-neighbours)|离散型监督学习算法|xxx|
