--- a/Machine_Learning/概述.md
+++ b/Machine_Learning/概述.md
@@ -28,4 +28,5 @@
 ### 算法总览
 |算法名称|算法分类|算法类别|
 |--|--|---|
-|<a href="./KNN.md">KNN(k-nearest-neighbours)</div>|离散型监督学习算法|xxx|
+|<a href="./KNN.md">KNN(k-nearest-neighbours)</div>|离散型监督学习算法||
+|xxx|xxx|xxx|
