--- a/Machine_Learning/概述.md
+++ b/Machine_Learning/概述.md
@@ -28,7 +28,7 @@
 ### 算法总览
 |算法名称|算法分类|算法类别|
 |--|--|---|
-|<a href="./KNN.md">KNN(k-nearest-neighbours)</div>|离散型监督学习算法||
-|决策树算法|离散型监督学习算法|ID3、C4.5、CART|
+|<a href="./KNN.md">KNN(k-nearest-neighbours)</a>|离散型监督学习算法||
+|<a href="./DecisionTrees.md">决策树算法</a>|离散型监督学习算法|<a href="./DecisionTrees.md#ID3">ID3</a>、<a href="./DecisionTrees.md#C4.5">C4.5</a>、<a href="./DecisionTrees.md#CART">CART</a>|
 |xxx|xxx|xxx|
 |xxx|xxx|xxx|
