--- a/Linux/时间.md
+++ b/Linux/时间.md
@@ -56,3 +56,20 @@ struct tm * structed_lotime = localtime(&ti);
 ### 字符串时间ctime和asctime
 
 ctime和asctime也是接受ti，返回的是字符串时间
+
+``ctime``- 字符串时间，即将时间转换成字符串
+
+```c
+#include<time.h>
+#include<stdio.h>
+int main(){
+  	time_t ti;  //定义一个time变量，存储1970-1-1 00:00:00 至今的秒数，现已约10亿多，long类型
+  	time(&ti); // 获取该秒数，填写到ti里
+  	printf("%time = %s",ctime(&ti)); // ctime 输出字符串格式   //注意：ctime会输出一个\n
+}
+
+//输出结果
+// time = Mon Oct  7 02:46:13 2019
+// time = Mon Oct  7 02:46:14 2019
+```
+
