--- a/Linux/进程.md
+++ b/Linux/进程.md
@@ -321,7 +321,7 @@ waitpid的参数：
                   int i=0; 
                   if(fork()!=0)//父进程退出 
                       exit(0);
-                  setsid(); //成为新进程组组长和新会话领导，脱离控制终
+                  setsid(); //成为新进程组组长和新会话领导，脱离控制终。终端包含很多会话组，一个会话组包含很多进程组，一个进程组包含很多进程
                   chdir("/"); //设置工作目录为根目录 
                   umask(0); //重设文件访问权限掩码 
                   for(;i<MAXFD;i++) //尽可能关闭所有从父进程继承来的文件 
