--- a/Front/前端基础知识1.md
+++ b/Front/前端基础知识1.md
@@ -27,11 +27,118 @@
 #### HTML 基础和细节
 1. ``html``文件由一个个嵌套的``元素``组成，即``<标签名 属性1=“属性值” 属性2=“属性值2”...> 标签内容 <\标签名>``
 
-2. ``注释``  =  <!-- 注释这么写-->
+2. ``注释``  =  ``<!-- 注释这么写-->``
 
-3. 声明HTML``版本类型``，需用刀<!DOCTYPE html>，该标签需要放置到文档的首行。
+3. 声明HTML``版本类型``，需用``<!DOCTYPE html>``，该标签需要放置到文档的首行。
 
 4. 有时候，尤其是在windows平台下，打开编写的html会出现中文乱码的情况。
 
-   该情况是由于文本编码问题。即浏览器默认解析文本文件不是通常的UTF-8。解决方案
+   该情况是由于文本编码问题。即浏览器默认解析文本文件不是通常的UTF-8。
+     解决方案:
 
+   ```html
+   <head>
+     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+     <!-- 元数据解析 http 是文本html类型，使用的字符集为utf-8 -->
+     <!-- 中国通常使用 UTF-8， 或是 GB2312 或是 GBK -->
+     <!-- UTF-8 支持 简体中文，繁体中文，日文，韩文等 -->
+     <!-- GB2312 支持 简体中文 -->
+   </head>
+   ```
+
+   
+
+#### HTML 基础标签
+
+1. 文字和段落
+
+   ```html
+   <h1> 标题1 </h1> <h6> 标题6 </h6>
+   <p> 段落标签 </p>
+   段落 标签的对齐属性 align：
+   	1. left，左对齐
+   	2. right，右对齐
+   	3. center, 中间对齐
+   	4. justify，进行行伸展，这样每行都可以有相同的长度
+   <br/> 换行标签 
+   &nbsp; 空白，即空格，需要加分号
+   ```
+
+   html标准推荐，所有的显示文字都需要有对应的文本标签引用，否则不符合规范。
+
+   - ``<h1>～<h6>``段落标题标签
+   - ``<p>``段落标签，有属性``align``值为**left**，**right**，**center**，**justify**，justify表示每行都一样长度
+   - ``<br/>``换行标签
+   - ``<hr/>``画水平线
+   - ``&nbsp;``空格，**注意**有分号
+   - ``<pre>``标签，正常的文本在文件中的排版是不会体现在浏览器里面的，加上pre标签后，html文件里是什么排版，浏览器解析就是什么排版 
+   - 修饰标签
+     - ``<i>``和``<em>``文字斜体
+     - ``<b>``和``<strong>``文字加粗
+     - ``<sub>``下标，``<sup>``上标
+   - 特殊符号（转义字符）
+     - ``&lt;``左尖括号``<``
+     - ``&gt;``右尖括号``>``
+     - ``&reg;``注册商标``®️``
+     - ``&copy;``版权``©️``
+     - ``&trade;``商标``™️``
+
+2. 列表标签
+
+   - 无序列表：``<ul>``列表，``<li>``列表项。``<ul type>``type属性，定义了无序列表显示的列表标记，disc表圆点，square表正方形，circle表空心圆  
+
+   - 有序列表：``<ol>``列表，``<li>``列表项。``<ol type>``属性包括，1表示数字，a表示小写字母，A表示大写字母，i表示罗马小写，I表示大写罗马字母
+
+   - 定义列表：``<dl>``列表，``<dt>``列表项，``<dd>``列表项描述。
+
+     ```html
+     <dl>
+       <dt>列表项</dt>
+       <dd>列表项描述</dd>
+       <dt>列表项</dt>
+       <dd>列表项描述</dd>
+     </dl>
+     ```
+
+3. 图片标签
+
+   - ``<img src="">``，src是图像的必填属性。其他属性包括``alt``替代文字（鼠标移上去显示的文字）；``height``高，``width``宽，可以数字像素``50px``或是百分比``30%``
+
+4. 超链接标签
+
+   - ``<a>``标签，属性：
+
+     - ``href``，填写一个url，可以是相对地址，也可以是绝对地址。可以覆盖图片、文字、段落等
+
+     - 若想保留一些链接效果，但是还没有准备好特定的URL地址，可以临时填写``href="#"``，作为``空链接`` 
+
+     - 说想要点击``刷新页面``，则``href=""``
+
+     - ``target``链接目标窗口，值可以为``_self``，``_blank``表示新打开一个标签，``_top``，``_parent``
+
+     - ``title``，链接提示文字
+
+     - ``name``，定义锚，命名
+
+       ```html
+       <!-- first.html 页面 -->
+       <a href="second.html#apple">跳转到另一页面的锚点apple出</a>
+       
+       <!-- second.html页面-->
+       <!-- 图片前面定义了一个锚点-->
+       <a name="apple"></a><img src="url"/> 
+       ```
+
+     - ``邮箱``
+
+       ```html
+       <a href="mailto:邮箱地址"> 点击我，就会打开邮箱发送 </a>
+       ```
+
+     - ``文件下载``
+
+       ```html
+       <a href="文件URL"> 点击我，就可以直接下载 </a>
+       ```
+
+       
