--- a/Front/前端基础知识1.md
+++ b/Front/前端基础知识1.md
@@ -142,3 +142,165 @@
        ```
 
        
+
+#### HTML 表格
+
+1. 表格的标签
+
+   ```html
+   <table>						   <!-- 表格 1*3 -->
+     <caption>标题</caption>  <!-- 表格标题标签 -->
+     <tr>							<!-- 行 -->
+       <th>表头</th>        <!-- 表头标签，默认剧中显示，默认加粗显示 --> 
+       <th>表头</th>        <!-- 表头标签，默认剧中显示，默认加粗显示 --> 
+       <th>表头</th>        <!-- 表头标签，默认剧中显示，默认加粗显示 --> 
+     </tr>
+     <tr>
+        <td>content</td>     <!-- 单元格标签 -->
+        <td>content</td>
+        <td>content</td>
+     </tr>
+   </table>
+   ```
+
+   
+
+2. Table 属性
+
+   - ``border``表格的边框大小 pixels
+   - ``width``宽度  pixels、 %
+   - ``align``对齐方式，left、center、right
+   - ``bgcolor``颜色
+   - ``cellpadding``单元格边缘与内容之间的空白，pixels、%
+   - ``cellspacing``单元格之间的空白，pixels、%
+   - ``frame``规定外侧边框哪个部分可见（table边框）
+   - ``rules``规定内侧边框哪个部分可见（单元格边框）
+
+3. 表格的优化
+
+   有时候一个内容很大的表格，浏览器在加载时需要等待所有表格数据全部加载完毕才会显示。这样``加载速度慢，用户体验差``。因而产生了表格优化选项：包括``<thead>``，``<tbody>``，``<tfoot>``标签。用这些标签覆盖``<tr>``标签，会加速表格的显示。
+
+   ```html
+   <table>
+     <caption></caption>
+     <thead>   <!-- 用thead包住 -->
+           <tr>
+               <th>表头</th>
+            	 <th>表头</th>
+           </tr>
+     </thead>
+     <tbody>  <!-- 用tbody包住 -->
+       	<tr>
+           	<td>数据</td>
+           	<td>数据</td>
+       	</tr>
+     </tbody>
+     <tfoot></tfoot>   <!-- 同理 tfoot -->
+   </table>
+   ```
+
+4. tr 标签属性
+
+   - ``align`` 水平对齐，left、center 、right 、 justify 、char
+   - ``valign``垂直对齐，top、middle、bottom、baseline
+   - ``bgcolor``
+
+5. td  标签属性
+
+   - ``height``高度设置
+   - ``width``
+   - ``valign``
+   - ``align``
+   - ``bgcolor``
+
+6. colspan 属性
+
+   ```html
+   <table>
+     <tr>
+       <td colspan="2"></td>    <!-- 一个td占一行的两个td的位置 -->
+     </tr>
+   </table>
+   ```
+
+7. rowspan 属性
+
+   ```html
+   <table>
+     <tr >     <!-- 一列占两列的位置 -->
+       	<td rowspan="2"></td>    <!-- 无论是colspan 还是rowspan，都应该是td标签的属性
+     </tr>
+   </table>
+   ```
+
+   
+
+#### HTML 表单
+
+1. 表单标签``<form>``
+
+   - ``action``提交的url
+   - ``method``提交的方式get、post
+   - ``target``提交后打开页面选项
+   - ``enctype``在发送表单数据之前如何对其编码，可选``application/x-www-form-urlencoded``，``multipart/form-data``，``text/plain``
+
+2. 表单标签可以内嵌很多其他种类的元素，包括
+
+   - ``<input>``表单输入标签，和其属性
+
+     ```html
+     <input type="类型属性" name="名称"  ../> 
+     ```
+
+     - ``name``属性：文字域的名称
+     - ``maxlength``属性：用户可输入到文本框的最大字符数
+     - ``size``：指定文本框大小，默认是输入20个字符的大小
+     - ``value``：默认值
+     - ``placeholder``：规定用户填写输入字段的提示，即用户光标放入文本框时，文本框显示的灰体提示
+
+   - ``<textarea>``文字域标签
+
+     - ``rows``行属性
+     - ``cols``列属性
+     - ``placeholder``提示字符
+
+   - ``<select>``表单和列表标签
+
+     ```html
+     <select>
+       <option selected>北京</option>   <!-- selected参数为默认选择值 -->
+       <option>上海</option>
+       <option>广州</option>
+       <option>深圳</option>
+     </select>
+     ```
+
+     - ``name``select的属性：下拉菜单的列表名
+     - ``multiple``设置可选择多个选项
+     - ``size``设置列表中可见的选项数目
+
+   - ``<optgroup>``表单和列表项目分组标签
+
+     ```html
+     <select>
+       <optgroup label="组1">  <!--label 属性的值会显示到列表中 -->
+         <option></option>
+         <option></option>
+         <option></option>
+       </optgroup>
+        <optgroup label="组2">
+         <option></option>
+         <option></option>
+         <option></option>
+       </optgroup>
+       
+     </select>
+     ```
+
+     
+
+#### 网页布局
+
+1. ``<div>``标签，它是一个垂直容器标签。其中的每一个标签内容占据一行（块级标签）
+2. ``<span>``标签，它是一个水平容器标签。其中每一标签内容占据一列（行内标签）
+
