--- a/Front/盒子模型.md
+++ b/Front/盒子模型.md
@@ -33,6 +33,8 @@
 
 ##### padding
 
+内边框
+
 ``padding-[top|left|right|bottom]``，长度值 | 百分比 | 不能为负值
 
 ``padding: 值1 值2 值3 值4;`` 上，右，下，左值
@@ -45,3 +47,46 @@
 
 **padding**的值会增加整个盒子的**高度**和**宽度**
 
+##### margin
+
+外边框
+
+``margin-[top|right|bottom|left]``，长度值 | 百分比 | auto | 可以为负值，值为auto通常会由浏览器决定，一般会居中显示
+
+``margin: 值1 值2 值3 值4;`` 上，右，下，左值
+
+``margin: 值1 值2 值3;``，上值1，左右值2，下值3
+
+``margin: 值1 值2;``，上下值1，左右值2
+
+``margin: 值1;`` 上下左右都为值1
+
+一些标签如``body``，``h1~h6``，``p``标签，是有默认的margin值的，为了不影响编写效果会在一开始设置如下
+
+```css
+body,h1,h2,h3,h4,h5,h6,p{margin:0;}
+```
+
+相邻的元素的外边距会发生``重叠``效应，重叠最终结果为``边距较大``的margin
+
+
+
+##### 盒子模型标准
+
+有两种盒子模型
+
+- 标准盒子模型，即盒子的``width``和``height``是用来设置元素的宽和高的
+- IE盒子模型，``width``和``height``是用来设置总体的宽和高的（包括margin，padding，border，以及元素的宽高)
+- 在文件开头添加``<!DOCTYPE HTML>``声明来提示浏览器，用标准HTML盒子模型来解析页面
+
+
+
+##### 盒子模型中元素的转换
+
+- 块元素包括``<p>``,``<h1>~<h6>``...，这些元素独占一行
+- 内联元素包括``<em>``,``<span>``,``<input>``等，这些元素独占一块（即本身不带换行符）
+- ``display``属性，其值可以为
+  - ``inline``，将元素显示为内联元素，即添加给块元素，块元素失去换行符
+  - ``block``，将元素显示为块元素，即添加给内联元素，元素后面会添加换行符
+  - ``inline-block``，元素呈现为inline状态，同时具有block特性
+  - ``none``，元素不显示
