--- a/Front/高德地图.md
+++ b/Front/高德地图.md
@@ -27,9 +27,9 @@ https://lbs.amap.com/api/javascript-api/guide/abc/prepare
 
 - 方法：
 
-  - getZoom() / setZoom()
+  - ``getZoom()`` / ``setZoom()``
 
-  - getCenter() / setCenter()
+  - ``getCenter()`` / ``setCenter()``
 
   - ``移动位置``后返回信息的方法
 
@@ -49,7 +49,7 @@ https://lbs.amap.com/api/javascript-api/guide/abc/prepare
     })
     ```
 
-  - getCity() 获取城市行政区信息 / setCity()
+  - ``getCity()`` 获取城市行政区信息 / ``setCity()``
 
     ```javascript
     myMap.getCity(function(info){
@@ -58,10 +58,31 @@ https://lbs.amap.com/api/javascript-api/guide/abc/prepare
     });
     ```
 
-  - getBounds() 获取地图显示范围。bounds表示在一定zoom下，一定的center下，整个地图页面包含的范围大小。有northeast和southwest两个值 
+  - ``getBounds()`` 获取地图显示范围。bounds表示在一定zoom下，一定的center下，整个地图页面包含的范围大小。有northeast和southwest两个值 
 
     ```javascript
     console.log(myMap.getBounds().northeast.toString());
+    ```
+
+  - ``setBounds()``设置地图显示范围
+
+    ```javascript
+    //设置地图显示范围需要有特殊方法
+    var Bounds = new AMap.Bounds([120,166],[121,168]); //传递两个参数，一个是northeast，一个是southwest的坐标
+    myMap.setBounds(Bounds); //然后再将生成的bounds对象传递个setBounds函数的参数
+    ```
+
+  - ``setLimitBounds()``/ ``clearLimitBounds()``，设置/清除一个地图显示界限，也就是超出此界限的地图不显示，即使用户移动也看不到，也会被迫重新定位到原有限制区域 
+
+    ```javascript
+    myMap.setLimitBounds(Bounds);
+    myMap.clearLimitBounds()
+    ```
+
+  - ``panBy()``，让地图平移某个像素 
+
+    ```javascript
+    myMap.panBy(-50,100)   //向左移动-50像素，向上移动100像素
     ```
 
     
