--- a/Front/高德地图.md
+++ b/Front/高德地图.md
@@ -1,4 +1,4 @@
-#  高德地图API
+# 高德地图API
 
 ---
 
@@ -85,5 +85,374 @@ https://lbs.amap.com/api/javascript-api/guide/abc/prepare
     myMap.panBy(-50,100)   //向左移动-50像素，向上移动100像素
     ```
 
-    
+  - ``panTo()``，将中心点移动到某个坐标
+
+    ```javascript
+    myMap.panTo([116,120]);
+    ```
+
+  - ``鼠标坐标``
+
+    ```javascript
+    myMap.on("click",function(e){
+      console.log(e.lnglat.lng);   //返回鼠标位置的经纬度
+    })
+    ```
+
+  - ``setDefaultCursor("pointer")``鼠标样式
+
+
+
+### 地图搜索
+
+1. 地图搜索开始时需要加载一个插件``Autocomplete``
+
+   ```javascript
+   AMap.plugin("AMap.Autocomplete", function(){
+       console.log("插件AutoComplete加载完毕"); //plugin函数为加载插件的函数，加载的是Autocomplete插件，加载完毕执行回调函数
+   })
+   ```
+
+2. 完成加载后执行``search()``函数
+
+   ```javascript
+   AMap.plugin("AMap.Autocomplete", function(){
+      new Autocomplete().search("北京", function(status,data){  //创建一个新的Autocomplete对象，并执行搜索函数
+        				// 有两个参数，一个参数是搜索的地址内容，另一个是回调函数。该回调函数有status和data两个参数。
+        				//data 就是我们搜索出来的数据
+         console.log(data.tips[i].location.P );  //tips会返回一个搜索结果数组，数组中某个值的location，的P坐标
+      }); 
+   })
+   ```
+
+   另一种写法
+
+   ```html
+   <script src=".......url&plugin=AMap.Autocomplete"></script>
+   <input id="myId">
+   ```
+
+   ```javascript
+   new AMap.Autocomplete({
+      input:"myId";   //直接给插件里传递一个对象，给一个input赋值为input标签的id就可以了
+   })
+   ```
+
+### 地图搜索与POI(Point of Interest)
+
+- 加载服务``AMap.PlaceSearch'``
+
+  ```javascript
+  AMap.service(["AMap.PlaceSearch"],function(){   //service 加载服务"AMap.PlaceSearch"，完毕后执行回调函数。
+    	new AMap.PlaceSearch({
+         city:"010",   //设置搜索的基本城市范围
+         map:myMap,    //搜索结果显示在哪个地图下
+         panel:"myDiv", //设置一个div，用于列出搜索的结果
+         pageSize:5,    //每页最多显示5条搜索结果 
+         pageIndex:2    //初始显示的第几页
+      }).search("电影院");  // 搜索内容为  电影院
+  })
+  ```
+
+- 监听用户选中某个搜索出来的地址，并跳转位置
+
+  ```javascript
+  var searchNode = new AMap.Autocomplete({
+    input:"inputDIV";    //加载插件并绑定输入框
+  });
+  var placeSearch = new AMap.PlaceSearch({
+     map:myMap; //绑定地图对象
+  })
+  AMap.event.addListener(searchNode,"select",function(e){ // 对该输入框的事件进行绑定，当用户select某一个搜索选项后触发
+     console.log(e.poi) // 表示用户选择位置的position值
+     placeSearch.search(e.poi.name) //通过绑定的地图，让其的位置直接跳转到事件e的位置处 
+  }); 
+  ```
+
+- 搜索某一个范围内的兴趣点
+
+  ```javascript
+  AMap.service(["AMap.PlaceSearch"],function(){   //service 加载服务"AMap.PlaceSearch"，完毕后执行回调函数。
+    	new AMap.PlaceSearch({
+         city:"010",   
+         type:"餐饮"    //type属性，可以约束搜索范围，也可以是住宿，娱乐等等种类
+         map:myMap,    
+         panel:"myDiv", 
+         pageSize:5,   
+         pageIndex:2    
+      }).searchNearBy("北京",[160.221,39.222],1000,function(){ //类似search，此处为searchNearBy
+            //第一个参数为要搜索的地域，第二个为搜索的中心点，第三个参数为搜索半径1000米
+      });  
+  })
+  ```
+
+
+
+### 添加标记
+
+``AMap.Marker()``
+
+```javascript
+var myMarker = new AMap.Marker({    //也需要传入一个对象参数
+  icon:"url",  //添加标志的图标
+  position:[166,39.5],  //添加标记的地图位置 
+  offset:new AMap.Pixel(-50,100); // 创建一个偏差值，即实际的标记会相对于position偏差(-50 ,100) 个像素
+});
+myMarker.setMap(myMap);   // 将标记放入某一个地图对象中
+// 或者用该方法，添加marker
+myMap.add([myMarker1,myMarker2,myMarker3]);
+// 删除marker
+myMap.remove([myMarker1,myMarker2,myMarker3])
+
+
+
+// 也可以创建一个新的图标样式
+var myIcon = new AMap.Icon({
+  size: new AMap.Size(500,500) , //载入一个500*500大小的图标
+  image:"url",
+  imageSize: new AMap.Size(200,200)  //图标在地图中显示大小
+})
+```
+
+``AMap.Circle()``矢量图
+
+```javascript
+var myCircle = new AMap.Circle({
+  center:[169,39];
+  radius:50;
+});
+myCircle.setMap(myMap);
+```
+
+``AMap.Rectangle()``矢量图
+
+```javascript
+var myRect = new ``AMap.Rectangle({
+  center:[169,39];
+  bounds: AMap.Bounds(new AMap.LngLat(122,33),new AMap.LngLat(122.5,33.3));
+});
+myRect.setMap(myMap);
+```
+
+
+
+### 比例尺
+
+``AMap.Scale``控件，用于添加比例尺控件
+
+```html
+<script src="url....plugin=AMap.Scale"></script>
+```
+
+```javascript
+myMap.addControl(new AMap.Scale()); //地图中添加比例尺控件
+```
+
+
+
+### 工具条
+
+``AMap.ToolBar``控件，用于添加工具条控件
+
+```html
+<script src="url....plugin=AMap.ToolBar"></script>
+```
+
+```javascript
+myMap.addControl(new AMap.ToolBar()); //地图中添加工具条控件 
+```
+
+
+
+### 3D 地图
+
+``viewMode``属性
+
+```javascript
+var myMap = AMap.Map("container",{
+  zoom:12,
+  center:[116,39.222],
+  viewMode:"3D";   //切换到3d模式地图
+  pitch:45,   // 切换到地图观察45度视角
+  buildingAnimation:true ; // 建筑物带动画显示
+})
+```
+
+或者
+
+``AMap.ControllBar``控件
+
+```html
+<script src="url ..&pulgin=AMap.ControlBar"></script>
+```
+
+```javascript
+myMap.addControl(new AMap.ControlBar({ //添加一个控制面板，
+   showZoomBar: true，    // 该面板中包含zoombar控件
+   position:{     //定义面板在map中的位置
+  			right:"50px";
+		},
+    showControlButton:false; // 不显示角度控制按钮                         
+}));
+```
+
+
+
+### 路线导航
+
+``AMap.Driving``插件
+
+驾驶插件
+
+```html
+<script src="url ..&pulgin=AMap.Driving"></script>
+```
+
+```javascript
+var myDriving = new AMap.Driving({
+  map:myMap,
+  panel: myDiv,  //显示路线信息面板的div对象
+});
+myDriving.search([                       //执行search路线方法，提供一个数组，包含两个地方
+  {keyword:"北京南站",city:"北京"},
+  {keyword:"北京西站",city:"北京"}
+],function(status,data){    //回调函数
+    console.log(data);
+});
+
+//or 不搜索地址，直接搜索两个坐标之间的路线
+myDriving.search([
+  new AMap.LngLat(116.7,39.5),
+  new AMap.LngLat(116.1,39.2)
+],function(status,data){});
+```
+
+
+
+ ``AMap.Walking``插件
+
+步行插件
+
+```html
+<script src="url ..&pulgin=AMap.Walking"></script>
+```
+
+```javascript
+//方法类似于驾驶，只是将AMap.Driving 改成 AMap.Walking
+```
+
+
+
+``AMap.TruckDriving``插件
+
+货车插件
+
+
+
+``AMap.Riding``插件
+
+骑行插件
+
+
+
+``AMap.Transfer``插件
+
+公交/地铁插件
+
+
+
+### 地图种类
+
+``AMap.MapType``控件
+
+控制地图的种类，默认，卫星
+
+```javascript
+myMap.addControl(new AMap.MapType({
+   defaultType:0 ,    //默认为0  1为卫星
+   showRoad:true;     // 
+}));
+```
+
+
+
+``AMap.OverView``控件
+
+鹰眼插件，会在地图上显示一个小的全域控件
+
+
+
+### 控件操作
+
+控件包括``ToolBar``、``OverView``、``Scale``、``MapType``等
+
+```javascript
+var tools = new AMap.ToolBar({
+  visible:false;   // 默认控件的默认显示 
+});
+tools.hide();   //隐藏控件
+tools.show();   //显示控件
+```
+
+
+
+### 地图事件
+
+``complete `` ，地图加载完成事件
+
+```javascript
+myMap.on("complete", function(){    //地图加载完毕事件
+  var text = new AMap.Text({
+     text:"地图加载完毕",
+     position:[166,39];
+  });
+  text.setMap(myMap);
+})
+```
+
+
+
+``zoomstart``和``zoomend``，地图zoom事件
+
+```javascript
+myMap.on("zoomstart",function(){
+  	console.log("zoom开始");
+})
+```
+
+
+
+``mapmove``、``movestart``、``moveend``，地图中心点移动事件
+
+```javascript
+myMap.on("mapmove",function(){});
+```
+
+
+
+``resize``地图容器尺寸改变时触发的事件
+
+```javascript
+myMap.on("resize",function({
+  resizeEnable:true;  //该属性默认为false，因而需要设置称为false才能真正触发
+}))
+```
+
+
+
+``mouseover``、``mousemove``、``mouseout``，鼠标移动时触发
+
+
+
+``DOM``事件
+
+```javascript
+var lis1 = AMap.event.addDOMListener(button1,"click",function(){
+    myMap.ZoomIn();
+})
+
+AMap.event.removeListener(lis1);
+```
+
+
 
