--- a/Front/前端布局.md
+++ b/Front/前端布局.md
@@ -66,6 +66,349 @@ Flexible box 布局又称弹性布局
 
 2010年Ethan Marcotte提出的，用于解决移动设备布局问题
 
+通过``媒体查询 @media``，加上断点机制来实现不同设备的响应式布局 
+
+响应式布局示例：
+
+``结构``
+
+```html
+<body>
+  <header class="container"> <!-- 页面头部，其他部分类似 -->
+      <div class="header-container"> <!--用于控制整体块显示居中 -->
+            <div class="header-container-logo"></div>
+            <div class="header-container-nav"></div>  
+      </div>
+  </header>
+</body>
+```
+
+``简单样式举例``
+
+```css
+@media (max-width:576px){   /*手机屏幕时*/
+  div.header-container{
+       width:576px;   /*不同屏幕时设定不同的宽度，设置500px的宽（小于579px）是为了给屏幕两边留空白*/
+       margin-left:auto;
+    	 margin-right:auto;   /*然后设置左右外边距自动，则中间块就会自动居中*/
+  }
+}
+```
+
+``珊格系统样式``
+
+1. 设置断点
+
+   ```css
+   /*   珊格系统推荐 从小屏入手，即移动端向大屏端 递进  */
+   
+   .container{      /* 该种情况是超小屏幕的情况。在小屏下，应该支持容器占满整个屏宽*/
+        width:100; /* 整个屏幕的宽度 */
+        margin-left:auto;
+        margin-right:auto; /*水平居中*/
+   }
+   
+   /* sm 小屏样式*/
+   @media (min-width:576px){
+     .container{   /*小屏时用固定宽度540px*/
+          width:540px
+     }
+   }
+   /* md 中屏*/
+   @media (min-width:768px){
+     .container{   /*中屏时用固定宽度720px*/
+          width:720px; 
+     }
+   }
+   /* lg 大屏*/
+   @media (min-width:992px){
+     .container{   /*大屏时用固定宽度960px*/
+          width:960px;
+     }
+   }
+   /* xl 超大屏*/
+   @media (min-width:1200px){
+     .container{   /*超大屏时用固定宽度1140px*/
+          width:1140px;
+     }
+   }
+   ```
+
+   
+
+2. 设置珊格行和列，此处有12个列
+
+   ```css
+   .row {
+   }
+   /*********************************************************/
+   /*一般小屏*/
+   .col-1,.col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12 {
+     float: left; /*统一的对于所有样式的列，都清除浮动*/
+   }
+   .col-1 {
+     /*col-1 表示该列占珊格12列中的一列，的样式 */
+     width: 8.33333333%; /* 1/12 = 8.3333% */
+   }
+   .col-2 {
+     /* 同理占两格子 */
+     width: 16.66666667%; /* 2/12 = 16.6666667% */
+   } 
+   .col-3 {width: 25%;} /* 同理*/
+   .col-4 {width: 33.33333333%;} /* 同理*/
+   .col-5 {width: 46.66666667%;}
+   .col-6 {width: 50%;}
+   .col-7 {width: 58.33333333%;}
+   .col-8 {width: 66.6666668%;}
+   .col-9 {width: 75%;}
+   .col-10 {width: 83.33333333%;}
+   .col-11 {width: 91.66666668%;}
+   .col-12 {width: 100%;}
+   
+   /*********************************************************/
+   /*同理 也需要对这种分屏样式进行断点处理，仅拿 sm 小屏举例。*/
+   /* sm 小屏样式*/  
+   /* 区别在于每个样式之间都添加了一个sm 小屏标示，用于区分 */
+   @media (min-width: 576px) {
+     .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,
+     .col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12 {
+       float: left; /*统一的对于所有样式的列，都清除浮动*/
+     }
+     .col-sm-1 {
+       /*col-1 表示该列占珊格12列中的一列，的样式 */
+       width: 8.33333333%; /* 1/12 = 8.3333% */
+     }
+     .col-sm-2 {
+       /* 同理占两格子 */
+       width: 16.66666667%; /* 2/12 = 16.6666667% */
+     }
+     .col-sm-3 {width: 25%;} /* 同理*/
+     .col-sm-4 {width: 33.33333333%;} /* 同理*/
+     .col-sm-5 {width: 46.66666667%;}
+     .col-sm-6 {width: 50%;}
+     .col-sm-7 {width: 58.33333333%;}
+     .col-sm-8 {width: 66.6666668%;}
+     .col-sm-9 {width: 75%;}
+     .col-sm-10 {width: 83.33333333%;}
+     .col-sm-11 {width: 91.66666668%;}
+     .col-sm-12 {width: 100%;}
+   }
+   /*********************************************************/
+   /*同理其他*/
+   /*压缩格式代码*/
+   /* md 中屏*/
+   @media (min-width:768px){
+       .col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,
+       .col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12 {float: left;}
+       .col-md-1 {width: 8.33333333%;}
+       .col-md-2 {width: 16.66666667%;} 
+       .col-md-3 {width: 25%;}
+       .col-md-4 {width: 33.33333333%;}
+       .col-md-5 {width: 46.66666667%;}
+       .col-md-6 {width: 50%;}
+       .col-md-7 {width: 58.33333333%;}
+       .col-md-8 {width: 66.6666668%;}
+       .col-md-9 {width: 75%;}
+       .col-md-10 {width: 83.33333333%;}
+       .col-md-11 {width: 91.66666668%;}
+       .col-md-12 {width: 100%;}
+   }
+   /* lg 大屏*/
+     @media (min-width:992px){
+       .col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,
+       .col-lg-7,.col-lg-8,.col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12 {float: left;}
+       .col-lg-1 {width: 8.33333333%;}
+       .col-lg-2 {width: 16.66666667%;} 
+       .col-lg-3 {width: 25%;}
+       .col-lg-4 {width: 33.33333333%;}
+       .col-lg-5 {width: 46.66666667%;}
+       .col-lg-6 {width: 50%;}
+       .col-lg-7 {width: 58.33333333%;}
+       .col-lg-8 {width: 66.6666668%;}
+       .col-lg-9 {width: 75%;}
+       .col-lg-10 {width: 83.33333333%;}
+       .col-lg-11 {width: 91.66666668%;}
+       .col-lg-12 {width: 100%;}
+     }
+   /* xl 超大屏*/
+     @media (min-width:1200px){
+       .col-xl-1,.col-xl-2,.col-xl-3,.col-xl-4,.col-xl-5,.col-xl-6,
+       .col-xl-7,.col-xl-8,.col-xl-9,.col-xl-10,.col-xl-11,.col-xl-12 {float: left;}
+       .col-xl-1 {width: 8.33333333%;}
+       .col-xl-2 {width: 16.66666667%;} 
+       .col-xl-3 {width: 25%;}
+       .col-xl-4 {width: 33.33333333%;}
+       .col-xl-5 {width: 46.66666667%;}
+       .col-xl-6 {width: 50%;}
+       .col-xl-7 {width: 58.33333333%;}
+       .col-xl-8 {width: 66.6666668%;}
+       .col-xl-9 {width: 75%;}
+       .col-xl-10 {width: 83.33333333%;}
+       .col-xl-11 {width: 91.66666668%;}
+       .col-xl-12 {width: 100%;}
+     }
+   ```
+
+3. 清浮动
+
+   ```css
+   /* 由于所有的 col 都是 float:left， 为了避免浮动对其他后续节点的影响，所以要清浮动*/
+   /* 清浮动，在其父节点处进行，之前以及之后*/
+   .container:before, .container:after .row:before, .row:after{
+      display:table;    /* 该处的table，以及content：''的内容是为了解决清浮动在某些浏览器下有bug的问题*/
+      content:"";
+   }
+   .container:after, .row:after{
+      clear:both;   /*实际在可能的父容器 container和row 之后 清浮动 */
+   }
+   /*********************************************************/
+   .clearFloat:before, .clearFloat:after{display:table;content:"";}  /*写一个独立的样式，可用于清浮动调用*/
+   .clearFloat:after{clear:both;}
+   ```
+
+4. 有时候需要给items添加边距
+
+   ```css
+   *{
+     margin:0;padding:0;box-sizing:border-sizing;
+   }
+   /*所有的都添加上得边距*/
+   .col-1,.col-2,.col-3,.col-4,.col-5,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12,
+   .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11,.col-sm-12,
+   .col-md-1,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,.col-md-10,.col-md-11,.col-md-12,
+   .col-lg-1,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,.col-lg-10,.col-lg-11,.col-lg-12,
+   .col-xl-1,.col-xl-2,.col-xl-3,.col-xl-4,.col-xl-5,.col-xl-6,.col-xl-7,.col-xl-8,.col-xl-9,.col-xl-10,.col-xl-11,.col-xl-12{
+     padding-left:15px;
+     padding-right:15px;
+   }
+   /* 同时为了清除左右 容器级别的溢出 */
+   /* 需要在其夫级别进行调整*/
+   .container, .row{
+     margin-left:-15px;margin-right:-15px;
+   }
+   
+   ```
+
+5. 设置可能的特殊操作，例如偏移等
+
+   ```css
+   /*****************************************/
+   .col-offset-0{margin-left:0; /*即浮动，然后左偏移*/}
+   .col-offset-1{margin-left:8.33333333%;; /*即浮动，然后左偏移*/}
+   .col-offset-2{margin-left:16.66666667%;; /*即浮动，然后左偏移*/}
+   .col-offset-3{margin-left:25%;; /*即浮动，然后左偏移*/}
+   .col-offset-4{margin-left:33.33333333%;; /*即浮动，然后左偏移*/}
+   .col-offset-5{margin-left:46.66666667%;; /*即浮动，然后左偏移*/}
+   .col-offset-6{margin-left:50%;; /*即浮动，然后左偏移*/}
+   .col-offset-7{margin-left:58.33333333%;; /*即浮动，然后左偏移*/}
+   .col-offset-8{margin-left:66.6666668%;; /*即浮动，然后左偏移*/}
+   .col-offset-9{margin-left:75%;; /*即浮动，然后左偏移*/}
+   .col-offset-10{margin-left:83.33333333%;; /*即浮动，然后左偏移*/}
+   .col-offset-11{margin-left:91.66666668%;; /*即浮动，然后左偏移*/}
+   .col-offset-12{margin-left:100%;; /*即浮动，然后左偏移*/}
+   /*****************************************/
+   .col-sm-offset-0{margin-left:0; /*即浮动，然后左偏移*/}
+   .col-sm-offset-1{margin-left:8.33333333%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-2{margin-left:16.66666667%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-3{margin-left:25%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-4{margin-left:33.33333333%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-5{margin-left:46.66666667%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-6{margin-left:50%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-7{margin-left:58.33333333%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-8{margin-left:66.6666668%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-9{margin-left:75%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-10{margin-left:83.33333333%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-11{margin-left:91.66666668%;; /*即浮动，然后左偏移*/}
+   .col-sm-offset-12{margin-left:100%;; /*即浮动，然后左偏移*/}
+   /*****************************************/
+   .col-md-offset-0{margin-left:0; /*即浮动，然后左偏移*/}
+   .col-md-offset-1{margin-left:8.33333333%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-2{margin-left:16.66666667%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-3{margin-left:25%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-4{margin-left:33.33333333%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-5{margin-left:46.66666667%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-6{margin-left:50%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-7{margin-left:58.33333333%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-8{margin-left:66.6666668%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-9{margin-left:75%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-10{margin-left:83.33333333%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-11{margin-left:91.66666668%;; /*即浮动，然后左偏移*/}
+   .col-md-offset-12{margin-left:100%;; /*即浮动，然后左偏移*/}
+   /*****************************************/
+   .col-lg-offset-0{margin-left:0; /*即浮动，然后左偏移*/}
+   .col-lg-offset-1{margin-left:8.33333333%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-2{margin-left:16.66666667%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-3{margin-left:25%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-4{margin-left:33.33333333%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-5{margin-left:46.66666667%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-6{margin-left:50%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-7{margin-left:58.33333333%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-8{margin-left:66.6666668%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-9{margin-left:75%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-10{margin-left:83.33333333%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-11{margin-left:91.66666668%;; /*即浮动，然后左偏移*/}
+   .col-lg-offset-12{margin-left:100%;; /*即浮动，然后左偏移*/}
+   /*****************************************/
+   .col-xl-offset-0{margin-left:0; /*即浮动，然后左偏移*/}
+   .col-xl-offset-1{margin-left:8.33333333%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-2{margin-left:16.66666667%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-3{margin-left:25%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-4{margin-left:33.33333333%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-5{margin-left:46.66666667%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-6{margin-left:50%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-7{margin-left:58.33333333%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-8{margin-left:66.6666668%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-9{margin-left:75%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-10{margin-left:83.33333333%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-11{margin-left:91.66666668%;; /*即浮动，然后左偏移*/}
+   .col-xl-offset-12{margin-left:100%;; /*即浮动，然后左偏移*/}
+   ```
+
+   向左右推操作
+
+   ```css
+   /*同理向左向右推 */
+   .col-push-0{left:auto;}
+   .col-push-1{left:8.33333333%;}
+   .col-pull-0{left:auto;}
+   .col-pull-1{left:8.33333333%;}
+   .col-sm-pull-0{left:auto;}
+   .col-sm-pull-1{left:8.33333333%;}
+   /****同理等等 ***/
+   ```
+
+6. block和隐藏，用于控制和隐藏
+
+   ```css
+   .d-none{
+     display:none !important;
+   }
+   .d-block{
+     display:block !important;
+   }
+   /* sm 小屏样式*/
+   @media (min-width: 576px) {
+   .d-sm-none {display: none !important}
+   .d-sm-block {display: block !important}}
+   /* md 中屏*/
+   @media (min-width: 768px) {
+   .d-md-none {display: none !important}
+   .d-md-block {display: block !important}}
+   /* lg 大屏*/
+   @media (min-width: 992px) {
+   .d-lg-none {display: none !important}
+   .d-lg-block {display: block !important}}
+   /* xl 超大屏*/
+   @media (min-width: 1200px) {
+   .d-xl-none {display: none !important}
+   .d-xl-block {display: block !important}}
+   
+   ```
+
+   
+
+
+
 
 
 ## 通用CSS网页布局
