--- a/Linux/基本命令.md
+++ b/Linux/基本命令.md
@@ -222,3 +222,37 @@ uname -a：查看系统内核版本信息
     ```
 
 - -r 参数，拷贝文件夹
+
+### 远程SSH登陆
+
+- ``ssh [-p 端口号] username@ip/domain:path``
+
+- ```bash
+  ssh-keygen # 会在~/.ssh文件下下生成public key 和 private key
+  ssh-copy-id url # 拷贝给某个远程url，类似于scp     
+  # 远程用户~/.ssh下就会生成一个authentication 文件， 从而获得public key 实现免密登陆
+  ```
+
+- 在``.ssh``文件夹下创建一个``config``文件，将以下内容填写进去：
+
+  ```bash
+  Host myServername
+      HostName ip地址
+      User username
+      Port 22        # 这样 调用ssh命令时 就可以直接使用  myServername  这个名字
+  ```
+
+  ``ssh myServername``就可以直接登陆了
+
+
+
+### 系统信息
+
+1. ``cal -y``一年的日历
+2. ``df -h`` disk free 查看磁盘剩余空间
+3. ``du -h`` disk used 查看磁盘使用情况
+4. ``htop``查看系统的内存使用情况，需要安装
+5. ``ifconfig eth0 up/down``启动或停用端口 eth0
+6. ``netstat -an ``查看端口状态
+7. ``lsof``查看打开文件。 ``lsof [tcp/udp]:port``查看打开的网络链接
+
